--- a/src/components/DeveloperPortal/DeveloperPortal.scss
+++ b/src/components/DeveloperPortal/DeveloperPortal.scss
@@ -318,7 +318,7 @@
   #slash19 {
     z-index: 3;
 
-    @media (max-width: 934px) {
+    @media (max-width: 1050px) {
       z-index: 1;
     }
   }
